--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,14 +1,14 @@
-.tweet {
+article.tweet-container {
   margin: 2em 0;
   border: 4px solid #545149;
   padding: .5em;
 }
 
-.tweet:hover {
+article.tweet-container:hover {
   box-shadow: 10px 10px #aabedf;
 }
 
-.tweet-header {
+article.tweet-container header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,24 +16,22 @@
   font-weight: 300;
 }
 
-.tweet-header .name-image {
+article.tweet-container header .name-image {
   display: flex;
   align-items: center;
   gap: .6em;
 }
 
-.tweet p {
-  /* margin: .5em 1em; */
-  /* border-bottom: 4px solid #545149; */
+.tweet-container p {
   padding: 0 .7em;
   margin: 1.5em 0 1.2em;
 }
 
-.tweet br {
+.tweet-container br {
   border-bottom: 4px solid #545149;
 }
 
-.tweet-footer {
+.tweet-container footer {
   display: flex;
   justify-content: space-between;
   margin: .5em 0;
@@ -42,20 +40,20 @@
   font-size: .7em;
 }
 
-footer .icons {
+.tweet-container footer .icons {
   color: #4056A1;
 
 }
 
-footer .icons .fa-solid {
+.tweet-container footer .icons .fa-solid {
   padding: 0 .3em;
 }
 
-footer .icons .fa-solid:hover {
+.tweet-container footer .icons .fa-solid:hover {
   color: #b7830a;
   cursor: pointer;
 }
 
-.user-tag {
+.tweet-header .user-tag {
   color: #aabedf
 }
