--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -41,7 +41,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-main {
+#tweets-container {
   width: 90%;
   margin: 0 auto;
   background-color: #f4f1ec;
@@ -50,7 +50,7 @@ main {
 }
 
 /* adds a small border below */
-main>p::after {
+#tweets-container>p::after {
   content: "";
   /* Add content (empty) for the pseudo-element */
   display: block;
@@ -66,4 +66,26 @@ button {
   color: #ffffff;
   border: none;
   padding: .3em;
+}
+
+@media only screen and (min-width: 1024px) {
+
+  /* Possibility to flex with common container */
+  /* main {
+    display: flex;
+    justify-content: space-around;
+  } */
+
+  #tweets-container {
+    box-sizing: border-box;
+    float: right;
+    width: 60%;
+    padding: 3em 4em;
+    /* border-width: 3em 0; */
+  }
+
+  #tweets-container h2 {
+    margin-top: 0;
+    ;
+  }
 }
