--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -27,3 +27,9 @@ nav>div {
 nav .arrow-icon {
   color: red;
 }
+
+@media only screen and (min-width: 1024px) {
+  nav {
+    position: sticky;
+  }
+}
