--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -11,12 +11,13 @@ nav {
   width: 100%;
 }
 
-nav > .page-title {
-  font-family: "Bungee", cursive;
+nav>.page-title {
+  font-family: 'Bungee',
+    cursive;
 }
 
 /*  */
-nav > div {
+nav>div {
   display: flex;
   flex-direction: column;
   align-items: center;
