--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -11,11 +11,11 @@ form textarea {
 }
 
 form .form-footer {
-  margin-top: 0.3em;
+  margin-top: .3em;
 }
 
 form output {
-  font-family: "Bungee";
+  font-family: 'Bungee';
 }
 
 .form-footer {
@@ -41,10 +41,10 @@ form output {
 }
 
 #form-error p {
-  margin: 0.5em 0;
+  margin: .5em 0;
 }
 
 #form-error i {
   font-size: 2em;
-  margin-top: 0.4em;
+  margin-top: .4em;
 }
