--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -1,7 +1,7 @@
 article.tweet-container {
   margin: 2em 0;
   border: 4px solid #545149;
-  padding: 0.5em;
+  padding: .5em;
 }
 
 article.tweet-container:hover {
@@ -12,18 +12,18 @@ article.tweet-container header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5em;
+  padding: .5em;
   font-weight: 300;
 }
 
 article.tweet-container header .name-image {
   display: flex;
   align-items: center;
-  gap: 0.6em;
+  gap: .6em;
 }
 
 .tweet-container p {
-  padding: 0 0.7em;
+  padding: 0 .7em;
   margin: 1.5em 0 1.2em;
 }
 
@@ -34,18 +34,19 @@ article.tweet-container header .name-image {
 .tweet-container footer {
   display: flex;
   justify-content: space-between;
-  margin: 0.5em 0;
-  padding: 0.8em 0.8em 0em;
+  margin: .5em 0;
+  padding: .8em .8em 0em;
   border-top: 4px solid #545149;
-  font-size: 0.7em;
+  font-size: .7em;
 }
 
 .tweet-container footer .icons {
   color: #4056A1;
+
 }
 
 .tweet-container footer .icons .fa-solid {
-  padding: 0 0.3em;
+  padding: 0 .3em;
 }
 
 .tweet-container footer .icons .fa-solid:hover {
@@ -54,5 +55,5 @@ article.tweet-container header .name-image {
 }
 
 .tweet-header .user-tag {
-  color: #aabedf;
+  color: #aabedf
 }
