--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,7 @@
 header.page-header {
   height: 520px;
   border-top: 120px solid transparent;
-  /* from trasnparenttextures.com */
+  /* from trasnparenhsl(42, 90%, 38%)es.com */
   background-color: #b7830a;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   display: flex;
