--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -8,6 +8,7 @@
 cursive;
 font-family: 'Source Sans 3',
 sans-serif; */
+@import 'colors';
 
 html {
   box-sizing: border-box;
@@ -24,8 +25,8 @@ html {
  */
 
 body {
-  color: #545149;
-  background-color: #f4f1ec;
+  color: $writing-main;
+  background-color: $background-main;
   font-size: 24px;
   font-family: 'Source Sans 3',
     sans-serif;
@@ -44,8 +45,8 @@ body {
 #tweets-container {
   width: 90%;
   margin: 0 auto;
-  background-color: #f4f1ec;
-  color: #545149;
+  background-color: $background-main;
+  color: $writing-main;
   font-weight: 600;
 }
 
@@ -56,13 +57,13 @@ body {
   display: block;
   margin-top: 5px;
   /* Ensure it's a block-level element */
-  border: 2px solid #545149;
+  border: 2px solid $writing-main;
   ;
 }
 
 button {
   font-family: 'Bungee';
-  background-color: #4056A1;
+  background-color: $blue-tone;
   color: #ffffff;
   border: none;
   padding: .3em;
