--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,23 +10,19 @@ nav {
   position: fixed;
   width: 100%;
 }
-
-nav > .page-title {
+nav .page-title {
   font-family: "Bungee", cursive;
 }
-
-/*  */
-nav > div {
+nav div {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-/* or nav>div>.icon */
 nav .arrow-icon {
   color: red;
 }
 
+/* or nav>div>.icon */
 @media only screen and (min-width: 1024px) {
   nav {
     position: sticky;
