--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -3,11 +3,9 @@ article.tweet-container {
   border: 4px solid #545149;
   padding: 0.5em;
 }
-
 article.tweet-container:hover {
   box-shadow: 10px 10px #aabedf;
 }
-
 article.tweet-container header {
   display: flex;
   justify-content: space-between;
@@ -15,23 +13,19 @@ article.tweet-container header {
   padding: 0.5em;
   font-weight: 300;
 }
-
 article.tweet-container header .name-image {
   display: flex;
   align-items: center;
   gap: 0.6em;
 }
-
-.tweet-container p {
+article.tweet-container header .user-tag {
+  color: #aabedf;
+}
+article.tweet-container p {
   padding: 0 0.7em;
   margin: 1.5em 0 1.2em;
 }
-
-.tweet-container br {
-  border-bottom: 4px solid #545149;
-}
-
-.tweet-container footer {
+article.tweet-container footer {
   display: flex;
   justify-content: space-between;
   margin: 0.5em 0;
@@ -40,19 +34,13 @@ article.tweet-container header .name-image {
   font-size: 0.7em;
 }
 
-.tweet-container footer .icons {
+.icons {
   color: #4056A1;
 }
-
-.tweet-container footer .icons .fa-solid {
+.icons .fa-solid {
   padding: 0 0.3em;
 }
-
-.tweet-container footer .icons .fa-solid:hover {
+.icons:hover {
   color: #b7830a;
   cursor: pointer;
-}
-
-.tweet-header .user-tag {
-  color: #aabedf;
 }
