--- a/sass/header.scss
+++ b/sass/header.scss
@@ -11,18 +11,18 @@ header.page-header {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-}
 
-header.page-header h2 {
-  color: #ffffff;
-}
+  h2 {
+    color: #ffffff;
+  }
 
-h2 .first-name {
-  font-weight: 600;
-}
+  .first-name {
+    font-weight: 600;
+  }
 
-h2 .last-name {
-  font-weight: 300;
+  .last-name {
+    font-weight: 300;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
