--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -12,24 +12,23 @@ nav {
   align-items: center;
   position: fixed;
   width: 100%;
-}
 
-nav>.page-title {
-  font-family: 'Bungee',
-    cursive;
-}
+  .page-title {
+    font-family: 'Bungee', cursive;
+  }
 
-/*  */
-nav>div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .arrow-icon {
+    color: red;
+  }
 }
 
 /* or nav>div>.icon */
-nav .arrow-icon {
-  color: red;
-}
 
 @media only screen and (min-width: 1024px) {
   nav {
