--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,5 +1,6 @@
 // @use 'colors';
 @import 'colors';
+@import 'mixins';
 
 header.page-header {
   height: 520px;
@@ -7,9 +8,7 @@ header.page-header {
   /* from trasnparenhsl(42, 90%, 38%)es.com */
   background-color: $yellow-tone;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flexVerticalAlign;
   justify-content: flex-end;
 
   h2 {
