--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,9 +17,25 @@ nav div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
-nav .arrow-icon {
+nav i.arrow-icon {
   color: red;
+  cursor: pointer;
+}
+nav i.arrow-icon:hover {
+  animation: bounce 2s infinite;
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(10px);
+  }
+  60% {
+    transform: translateY(5px);
+  }
 }
 
 /* or nav>div>.icon */
