--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'mixins';
 
 nav {
   height: 120px;
@@ -18,13 +19,40 @@ nav {
   }
 
   div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flexVerticalAlign();
+    position: relative;
   }
 
-  .arrow-icon {
+  i.arrow-icon {
     color: red;
+    cursor: pointer;
+    // transition-property: transform;
+    // transition-duration: 0.3s;
+    // transform-origin: center;
+
+    &:hover {
+      animation: bounce 2s infinite;
+      // transform: translateY(5px);
+    }
+
+    @keyframes bounce {
+
+      0%,
+      20%,
+      50%,
+      80%,
+      100% {
+        transform: translateY(0);
+      }
+
+      40% {
+        transform: translateY(10px);
+      }
+
+      60% {
+        transform: translateY(5px);
+      }
+    }
   }
 }
 
