--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,7 +8,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  top: 0;
   width: 100%;
+  z-index: 10;
 }
 nav .page-title {
   font-family: "Bungee", cursive;
@@ -39,8 +41,3 @@ nav i.arrow-icon:hover {
 }
 
 /* or nav>div>.icon */
-@media only screen and (min-width: 1024px) {
-  nav {
-    position: sticky;
-  }
-}
