--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -2,9 +2,11 @@
 
 .new-tweet {
   position: relative;
+  margin-bottom: 2em;
 }
 
 form {
+
   textarea {
     border: none;
     background-color: inherit;
