--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,6 +8,7 @@ header.page-header {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  margin-bottom: 2em;
 }
 header.page-header h2 {
   color: #ffffff;
