--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 article.tweet-container {
-  margin: 2em 0;
+  margin-bottom: 2em;
   border: 4px solid $writing-main;
   padding: .5em;
 
