--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -59,9 +59,4 @@ nav {
 
 /* or nav>div>.icon */
 
-@media only screen and (min-width: 1024px) {
-  nav {
-    // position: relative;
-    // top: 0;
-  }
-}
+@media only screen and (min-width: 1024px) {}
